[package]
name = "password"
version = "1.0.0"
edition = "2021"
license = "MIT"
authors = ["David Carruthers <david@dweb-x.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.3", features = ["derive"] }
rand = { version = "0.8.5", features = [] }
once_cell = "1.21.3"
rand_chacha = "0.3.1"
rand_core = "0.6.4"
